--- a/block.less
+++ b/block.less
@@ -22,7 +22,7 @@
 	}
 	&-footer{
 		min-height: 48px;
-		margin-top: -48px/2 - @block-padding-vertical-large;
+		margin-top: @global-spacing-vertical*2;
 	}
 	&-nav{
 		height: 40px;
