--- a/uikit.less
+++ b/uikit.less
@@ -52,6 +52,7 @@
 @import "offcanvas.less";
 @import "slideshow.less";
 @import "slidenav.less";
+@import "dotnav.less";
 
 // Need to be loaded last
 @import "text.less";
