--- a/block.less
+++ b/block.less
@@ -27,6 +27,9 @@
 	&-nav{
 		height: 40px;
 		padding: 0 !important;
+		@media(min-width:@breakpoint-large){
+			margin-bottom: -5px;
+		}
 	}
 
 	//--------- Typo -----------
