--- a/text.less
+++ b/text.less
@@ -19,4 +19,5 @@
 // Miscellaneous
 // ========================================================================
 
-.hook-text-misc() {}
+.hook-text-misc() {
+}
