--- a/base.less
+++ b/base.less
@@ -19,13 +19,15 @@
 
 @base-margin-vertical:                          @global-margin;
 
-@base-heading-color:                            @global-color;
+@base-heading-color:                            @global-heading-color;
 @base-heading-margin-top:                       @global-margin-large;
 @base-h1-font-size:                             round((@global-font-size * 2.6)); // 36px / 42px
 @base-h1-line-height:                           round((@base-h1-font-size * 1.154)); // 42px / 48px
-@base-h2-font-size:                             round((@global-font-size * 1.74)); // 24px / 28px
+@base-h2-font-size:                             18px;
+//@base-h2-font-size:                             round((@global-font-size * 1.74)); // 24px / 28px
 @base-h2-line-height:                           round((@base-h2-font-size * 1.27)); // 30px / 36px
-@base-h3-font-size:                             round((@global-font-size * 1.28)); // 18px / 20px
+@base-h3-font-size:                             14px;
+//@base-h3-font-size:                             round((@global-font-size * 1.28)); // 18px / 20px
 @base-h3-line-height:                           round((@base-h3-font-size * 1.32)); // 24px / 26px
 @base-h4-font-size:                             round((@global-font-size * 1.14)); // 16px / 18px
 @base-h4-line-height:                           round((@base-h4-font-size * 1.36)); // 22px / 24px
@@ -67,13 +69,27 @@
 
 .hook-base-h1() {}
 
-.hook-base-h2() {}
+.hook-base-h2() {
+	text-transform: uppercase;
+	font-weight: bold;
+}
 
-.hook-base-h3() {}
+.hook-base-h3() {
+	margin: 1em 0;
+	
+	font-weight: bold;
+	font-size: 14px;
+	text-transform: uppercase;
+}
 
-.hook-base-h4() {}
+.hook-base-h4() {
+	font-weight: bold;
+}
 
-.hook-base-h5() {}
+.hook-base-h5() {
+	font-weight: bold;
+	margin-top:@global-spacing;
+}
 
 .hook-base-h6() {}
 
