--- a/nav.less
+++ b/nav.less
@@ -22,6 +22,7 @@
 @nav-parent-icon-width:                         @global-line-height;
 
 @nav-side-color:                                @global-color;
+@nav-side-hover-background:                     rgba(0,0,0,0.03);
 @nav-side-hover-color:                          @global-color;
 @nav-side-active-background:                    @global-primary-background;
 @nav-side-active-color:                         @global-contrast-color;
@@ -52,9 +53,27 @@
 @nav-offcanvas-active-background:               darken(@offcanvas-bar-background, 10%);
 @nav-offcanvas-active-color:                    @offcanvas-panel-link-hover-color;
 @nav-offcanvas-header-color:                    @offcanvas-panel-color;
-@nav-offcanvas-divider-border:                  darken(@offcanvas-bar-background, 10%);
+@nav-offcanvas-divider-border:                  rgba(255,255,255,0.01);
 @nav-offcanvas-nested-color:                    @offcanvas-panel-link-color;
 @nav-offcanvas-nested-hover-color:              @offcanvas-panel-link-hover-color;
+
+//
+// New
+//
+
+@nav-side-hover-text-shadow:                    @global-text-shadow;
+@nav-side-active-text-shadow:                   @global-contrast-text-shadow;
+@nav-side-active-box-shadow:                    rgba(0,0,0,0.2);
+
+@nav-dropdown-hover-text-shadow:                @global-contrast-text-shadow;
+@nav-dropdown-hover-box-shadow:                 rgba(0,0,0,0.2);
+
+@nav-navbar-hover-text-shadow:                  @global-contrast-text-shadow;
+@nav-navbar-hover-box-shadow:                   rgba(0,0,0,0.2);
+
+@nav-offcanvas-text-shadow:                     rgba(0,0,0,0.5);
+@nav-offcanvas-header-background:               lighten(@offcanvas-bar-background, 5%);
+@nav-offcanvas-divider-background:              rgba(0,0,0,0.2);
 
 
 // Sub-object: `uk-nav-header`
@@ -91,10 +110,16 @@
 .hook-nav-side() {}
 
 // Hover
-.hook-nav-side-hover() {}
+.hook-nav-side-hover() {
+    box-shadow: inset 0 0 1px rgba(0,0,0,0.1);
+    text-shadow: 0 -1px 0 @nav-side-hover-text-shadow;
+}
 
 // Active
-.hook-nav-side-active() {}
+.hook-nav-side-active() {
+    box-shadow: inset 0 2px 4px @nav-side-active-box-shadow;
+    text-shadow: 0 -1px 0 @nav-side-active-text-shadow;
+}
 
 //
 // Sub-object: `uk-nav-header`
@@ -106,7 +131,7 @@
 // Sub-object: `uk-nav-divider`
 //
 
-.hook-nav-side-divider() {}
+.hook-nav-side-divider() { box-shadow: 0 1px 0 @nav-side-hover-text-shadow; }
 
 
 // Modifier `uk-nav-dropdown`
@@ -119,7 +144,10 @@
 .hook-nav-dropdown() {}
 
 // Hover
-.hook-nav-dropdown-hover() {}
+.hook-nav-dropdown-hover() {
+    box-shadow: inset 0 2px 4px @nav-dropdown-hover-box-shadow;
+    text-shadow: 0 -1px 0 @nav-dropdown-hover-text-shadow;
+}
 
 //
 // Sub-object: `uk-nav-header`
@@ -144,7 +172,10 @@
 .hook-nav-navbar() {}
 
 // Hover
-.hook-nav-navbar-hover() {}
+.hook-nav-navbar-hover() {
+    box-shadow: inset 0 2px 4px @nav-navbar-hover-box-shadow;
+    text-shadow: 0 -1px 0 @nav-navbar-hover-text-shadow;
+}
 
 //
 // Sub-object: `uk-nav-header`
@@ -163,35 +194,66 @@
 // ========================================================================
 
 .hook-nav-offcanvas-link() {}
-
 .hook-nav-offcanvas-link-hover() {}
 
 //
 // Items
 //
 
-.hook-nav-offcanvas() {}
-
-// Hover
-.hook-nav-offcanvas-hover() {}
+.hook-nav-offcanvas() {
+    border-top: 1px solid rgba(0,0,0,0.3);
+    box-shadow: inset 0 1px 0 rgba(255,255,255,0.05);
+    text-shadow: 0 1px 0 @nav-offcanvas-text-shadow;
+}
 
 // Active
-.hook-nav-offcanvas-active() {}
+.hook-nav-offcanvas-active() { box-shadow: inset 0 1px 3px rgba(0,0,0,0.3); }
 
 //
 // Sub-object: `uk-nav-header`
 //
 
-.hook-nav-offcanvas-header() {}
+.hook-nav-offcanvas-header() {
+    margin-top: 0;
+    border-top: 1px solid rgba(0,0,0,0.3);
+    background: @nav-offcanvas-header-background;
+    box-shadow: inset 0 1px 0 rgba(255,255,255,0.05);
+    text-shadow: 0 1px 0 @nav-offcanvas-text-shadow;
+}
 
 //
 // Sub-object: `uk-nav-divider`
 //
 
-.hook-nav-offcanvas-divider() {}
+.hook-nav-offcanvas-divider() {
+    margin: 0;
+    height: 4px;
+    background: @nav-offcanvas-divider-background;
+    box-shadow: inset 0 1px 3px rgba(0,0,0,0.3);
+}
 
 
 // Miscellaneous
 // ========================================================================
 
-.hook-nav-misc() {}
+.hook-nav-misc() {
+
+    /*
+     * Modifier `uk-nav-offcanvas`
+     */
+
+    .uk-nav-offcanvas {
+        border-bottom: 1px solid rgba(0,0,0,0.3);
+        box-shadow: 0 1px 0 rgba(255,255,255,0.05);
+    }
+
+    /*
+     * Sub-object: `uk-nav-sub`
+     */
+
+    .uk-nav-offcanvas .uk-nav-sub {
+        border-top: 1px solid rgba(0,0,0,0.3);
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.05);
+    }
+
+}
